<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".OptionsPage">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="106dp"
            android:layout_height="40dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="12dp"
            android:text="@string/titleTV"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bodyTV"
            android:layout_width="120dp"
            android:layout_height="44dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/bodyTV"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="52dp"
            android:ems="10"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/bodyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleTV" />

        <TextView
            android:id="@+id/bodyText"
            android:layout_width="369dp"
            android:layout_height="71dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyTV" />

        <Button
            android:id="@+id/closeBtn"
            android:layout_width="120dp"
            android:layout_height="49dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="160dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/closeBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bodyText"
            app:layout_constraintVertical_bias="0.793" />

        <Button
            android:id="@+id/lfsBtn"
            android:layout_width="107dp"
            android:layout_height="64dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="96dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/lfsBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/lffBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/stfBtn"
            android:layout_width="103dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="96dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/stfBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/stsBtn"
            app:layout_constraintEnd_toStartOf="@+id/lfsBtn"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/lffBtn"
            android:layout_width="120dp"
            android:layout_height="64dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="156dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/lffBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/stsBtn"
            android:layout_width="103dp"
            android:layout_height="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="156dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/stsBtn"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lffBtn"
            app:layout_constraintHorizontal_bias="0.877"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>